messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: django
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
      - name: django
        image: your-django-image:green   # new version image
        ports:
        - containerPort: 8000
