messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django-messaging-container
          image: django-messaging-app:latest

          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000       # Cluster-internal port
      targetPort: 8000 # Django container port
  type: ClusterIP
