messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-django.local   
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service   
            port:
              number: 8000
